# walnut-cli

./: .gitignore  LICENSE.md  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  run-tests.sh  setup-soldb.sh  setup-walnut.sh  test-setup.sh  walnut-cli.py
docs/: architecture.md  ethdebug_usage.md
examples/: Ballot.sol  Controller.sol  Counter.sol  OrderProcessor.sol  SimpleAuction.sol  StructExample.sol  TaxCalculator.sol  TestContract.sol
examples/multi_contract/: Logger.sol  OrderProcessor.sol  PaymentProcessor.sol  ShippingManager.sol  TaxCalculator.sol
scripts/: deploy-contract.sh  interact-contract.sh  publish-pypi.sh
src/soldb/: __init__.py  abi_utils.py  auto_deploy.py  colors.py  compile_ethdebug.py  compiler_config.py  ethdebug_parser.py  evm_repl.py  json_serializer.py  main.py  multi_contract_ethdebug_parser.py  setup.py  transaction_tracer.py
src/walnut_cli/: __init__.py  abi_utils.py  auto_deploy.py  colors.py  compile_ethdebug.py  compiler_config.py  debug_session.py  dwarf_parser.py  ethdebug_parser.py  evm_repl.py  json_serializer.py  main.py  multi_contract_ethdebug_parser.py  setup.py  transaction_tracer.py
test/: README.md  basic-trace.test  deploy-contract.sh  deploy-test-contract.sh  increment-trace.test  interact-contract.sh  lit.cfg.py  lit.site.cfg.py  raw-trace.test  run-tests.sh  test-setup.sh
