[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soldb"
version = "0.1.0"
description = "A powerful debugger for Solidity transactions on the Ethereum blockchain"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Monitoring",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["ethereum", "solidity", "debugger", "evm", "blockchain", "smart-contracts"]
requires-python = ">=3.8"
dependencies = [
    "web3>=6.0.0",
    "eth-utils>=2.0.0", 
    "hexbytes>=0.3.0",
    "pyelftools>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "mypy>=0.990",
    "build>=0.10.0",
    "twine>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/soldb"
Documentation = "https://github.com/yourusername/soldb#readme"
Repository = "https://github.com/yourusername/soldb.git"
Issues = "https://github.com/yourusername/soldb/issues"

[project.scripts]
soldb = "soldb.main:main"
soldb-setup = "soldb.setup:main"

[tool.setuptools]
packages = ["soldb"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
soldb = ["py.typed"]